workspace = { members = ["minesweeper-lib"] }

[package]
name = "mosquito-swatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.23", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.36.0", features = ["full"] }
minesweeper-lib.path = "./minesweeper-lib"
